Removed theme change button, added description to cycle 5 page

--- a/cy5/cy5.html
+++ b/cy5/cy5.html
@@ -35,23 +35,18 @@
             <li class="nav-item">
               <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
             </li>
-            <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Background Themes
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <button class="dropdown-item" id="rainbow">Rainbow</button>
-                <button class="dropdown-item" id="fifty_blue">Fifty Shades of Blue</button>
-              </div>
-            </div>
           </ul>
           </div>
           </nav>
           </navbar>
           <main id="main">
             <br />
-      <h2 id="thingHead"><strong>Cycle 5 Artwork</strong></h2>
-      <p id="under">This page is still under development</p>
+            <h2 id="thingHead"><strong>Cycle 5 Artwork</strong></h2>
+            <p>In Cycle 5, we began learning about contemporary art. We started off working on the era between Modern and Contemporary art, featuring periods such as Abstract Expressionism, Cubism and Fauvism. We also created our own paintings
+              using a chosen form of Modern Art. We also used some of our paintings in the school's annual art show at Mission Coffee House. Later on, we began learning about Street Art, featuring the likes of Banksy and Jean-Michel Basquiat. As this was our last cycle, we were now approaching art of this time, so we were also looking
+              at forms of art which are not often credited as actual art. Overall, this cycle really helped us understand what art is around us today. </p>
+            <p><em>Click the links to view each project</em></p>
+            </main>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src = "../js_css/listeners.js"></script>
