Added cycle 5 stuff

--- a/cy5/cy5.html
+++ b/cy5/cy5.html
@@ -46,13 +46,13 @@
               using a chosen form of Modern Art. We also used some of our paintings in the school's annual art show at Mission Coffee House. Later on, we began learning about Street Art, featuring the likes of Banksy and Jean-Michel Basquiat. As this was our last cycle, we were now approaching art of this time, so we were also looking
               at forms of art which are not often credited as actual art. Overall, this cycle really helped us understand what art is around us today. </p>
             <p><em>Click the links to view each project</em></p>
-            <p><a id="first_link" style="margin-left: 0px;" class='descLinks'href="cubism.html"><strong>Cubism Artwork (Also coffeeshop artwork)</strong></a><a id="second_link"class='descLinks'href="graffiti.html"><strong>Graffiti Photographs</strong></a></a><a id="third_link"class='descLinks'href="memes.html"><strong>Memes</strong></a>
-            </a><a id="fourth_link"class='descLinks'href="gardens.html"><strong>Fioli Gardens Watercolor Work</strong></a></p>
+            <p><a id="first_link" style="margin-right: 120px;" class='descLinks'href="cubism.html"><strong>Cubism Artwork</strong></a><a id="second_link"class='descLinks'href="graffiti.html" style="margin-right: 0px;"><strong>Graffiti Photographs</strong></a></a><a id="third_link"class='descLinks'href="memes.html" style="margin-left: 160px; margin-right: 100px;"><strong>Memes</strong></a>
+            </a><a id="fourth_link"class='descLinks'href="gardens.html"><strong>Filoli Gardens Watercolor Work</strong></a></p>
             <br />
-            <img id="first_img"class="artworkImgs"class='cy4imgs'src = "1ptPerspective1.png" width="20%"height="20%"/>
-            <img class="artworkImgs" id='compute'src = 'VanGogh.png' width="18%"height="5%"/>
-            <img class="artworkImgs" src = 'expression.png' width="18%"height="5%"/>
-            <img class="artworkImgs" height="380px"src = 'abstract.png' width="18%"height="5%"/>
+            <img id="first_img"class="artworkImgs"class='cy4imgs'src = "cubism.png" width="20%"height="10%" style="height: 400px; margin-left: 50px; margin-right: 30px;"/>
+            <img class="artworkImgs" id='compute'src = 'vert_graffiti.png' width="18%"height="5%" style="width: 300px; height: 400px;"/>
+            <img class="artworkImgs" src = 'meme3.png' width="18%"height="5%" style="height: 300px;"/>
+            <img class="artworkImgs" height="380px"src = 'vert_flowers.jpg' width="18%"height="5%"/>
 
             <br />
             </main>
