--- a/cy5/meme1.html
+++ b/cy5/meme1.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Filoli Gardens Watercolor Artwork</title>
+    <title>Meme 1</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel = stylesheet href = "../js_css/portfolio.css" />
     <link type="image/png" rel="icon" href="https://raw.githubusercontent.com/KabirSamsi/Digital-Portfolio/master/js_css/paintbrush.ico">
@@ -10,23 +10,20 @@
   <body>
     <navbar id='navbar'>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="cy5.html">Cycle 5 Artwork</a>
+        <a class="navbar-brand" href="memes.html">Memes</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="cubism.html">Cubism Artwork<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="#">Meme 1<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="graffiti.html">Graffiti Photographs<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="meme2.html">Meme 2<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy2"href="memes.html">Memes<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" id="cy3"href="#">Filoli Gardens Watercolor Artwork<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy2"href="meme3.html">Meme 3<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -34,18 +31,14 @@
     </navbar>
     <main id='main'>
       <br />
-      <h1 id='thingHead'><strong>Filoli Gardens Watercolor Artwork</strong></h1>
+      <h1 id='thingHead'><strong>Meme 1</strong></h1><br />
+      <img id = 'onept' src = "meme1.png"width="25%"height="14%" style="width: 200px; height: 500px;"/>
       <br /><br />
-      <img id = 'sculpture2' src = "flowers.jpg"width="25%"height="14%" style="margin-right: 100px; width: 500px;"/>
-      <img id = 'sculpture3' src = "mountains.jpg"width="25%"height="14%" style="width: 500px;"/>
-      <br /><br /><br />
-      <em>Mediums: Watercolor Paper, Watercolor Pencils, Waterbrush</em>
+      <em>Medium: Google Drawings</em>
       <br /><br />
-      <p>In our second-to-last week of school, we went on a field trip to the Filoli Gardens. Over here, we toured the gardens and the mansion on the grounds, and at two spots we did watercolor painting.
-        I did one painting of the rose beds, which we visited first. I painted the flowers of each bush a different color, similar to the way they were in reality, but not exactly. My second painting was
-        of the mountain scenery behind the gardens, and I tried to show the different shades of grass and brush through vaguely different colors. We used different techniques which we had learned to paint
-        with watercolor pencils, before turning it into watercolor paint with a water brush. This experience was relaxing and fun, as we were given time when we could reflect on what we were seeing and
-        portray it how we saw it. </p>
+      <p>This was the first meme I created, mocking our lack of proper physical activity during PE. I realized afterwards that I had formatted it very badly, and in the future tried to give my memes a more authentic
+      format and sizing. I also thought that the images could have used some work, However, for a first attempt, I was pleased with it, especially since I had been at a dead end for what to make my memes about for a
+    while. After doing this, the ideas for the other two memes came pretty quickly. </p>
     </main>
   <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
