Finished biome section

--- a/biome/biome.html
+++ b/biome/biome.html
@@ -44,14 +44,17 @@
               <br />
         <h2 id="thingHead"><strong>Biome Artwork</strong></h2>
         <p>Every year, we have two biomes trips, one being the Mini Biome Trip and one being the actual Biome Trip. These are both part of two of the year's biggest assignments, being the Mini Biome Report and the Biome Report.
-          During these trips, we get art assignments which we include in the reports, related to something we did on the trip. From learning about Maria Montessori's Great Lesson to many other things, we always had fun art projects on these trips.</p>
+          During these trips, we get art assignments which we include in the reports, related to something we did on the trip. From learning about Maria Montessori's Great Lesson to drawing vertical stratifications of the habitats
+          we were visiting, we always had fun art projects on these trips.</p>
         <p><em>Click the links to view each project</em></p>
       </main id="main">
-        <p><a id="first_link_biome"class='descLinks'href="visual.html"><strong>Great Lesson Visual</strong></a> <a id="second_link"class='descLinks'href="fauna.html"><strong>Fauna Sketches</strong></a></a><a id="third_link"class='descLinks'href="flora.html"><strong>Flora Sketches</strong></a></p>
+        <p><a style="margin-left: 200px;" id="first_link_biome"class='descLinks'href="visual.html"><strong>Great Lesson Visual</strong></a> <a id="second_link"class='descLinks'href="fauna.html"><strong>Fauna Sketches</strong></a></a><a id="third_link"class='descLinks'href="flora.html">
+          <strong>Flora Sketches</strong></a><a class="descLinks" href="stratification.html"><strong>Vertical Stratification</strong></a></p>
         <br />
-        <img id="first_image"class="space_img"src = "Timeline.jpg"alt="timeline" height="360px"/>
+        <img id="first_image"class="space_img"src = "Timeline.jpg"alt="timeline" height="360px" style="margin-left: 50px;"/>
         <img id="first_img"class="artworkImgs"class='space_img'src = "fox.jpg" width="20%"height="20%"/>
         <img class="artworkImgs" src = 'flower.jpg' width="18%"height="5%"/>
+        <img class="artworkImgs"class='artworkImgs'src = "stratification.jpg" width="20%"height="20%"/>
         </main>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
