--- a/biome/fox.html
+++ b/biome/fox.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Flora Sketches</title>
+    <title>Red Fox</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel = stylesheet href = "../js_css/portfolio.css" />
     <link type="image/png" rel="icon" href="https://raw.githubusercontent.com/KabirSamsi/Digital-Portfolio/master/js_css/paintbrush.ico">
@@ -10,23 +10,17 @@
   <body>
     <navbar id='navbar'>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="biome.html">Biome Artwork</a>
+        <a class="navbar-brand" href="fauna.html">Fauna Sketches</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="visual.html">Great Lesson Visual<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="#">Red Fox<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="fauna.html">Fauna Sketches<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" id="cy2"href="#">Flora Sketches<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" id="cy3"href="stratification.html">Vertical Stratification<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="jay.html">Steller's Jay<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -34,17 +28,13 @@
     </navbar>
     <main id='main'>
       <br />
-      <h1 id='thingHead'><strong>Flora Sketches</strong></h1>
+      <h1 id='thingHead'><strong>Red Fox</strong></h1><br />
+      <img id = 'onept' src = "hor_fox.jpg"width="25%"height="14%" style="width: 500px; height: 370px;"/>
       <br /><br />
-      <p><a style="margin-left: 0px;" id="first_perspective"class='descLinks'href="flower.html"><strong>Scarlet Monkeyflower</strong></a><a class='descLinks'href="shoe.html"><strong>Hiking Shoe</strong></a></p>
-      <img id = 'con2' src = "hor_flower.jpg"width="25%"height="14%"/>
-      <img id = 'sculpture1' src = "shoe.jpg" style="width: 400px; height: 300px;"/>
-      <br /><br /><br />
       <em>Mediums: Chalk Pastel, Color Pencils, Printer/Sketchbook Paper</em>
-      <br /><br />
-      <p>We were supposed to draw four scientific sketches over the course of the biome trip. The first two were supposed to be done before the trip, featuring one fauna and one flora.
-        The second pair were to be done on the trip, and could be anything we wanted, as long as it had the qualities of a scientific sketch. For my last sketch, I didn't sketch flora, but
-        rather sketched an inanimate object, my hiking shoe. I really enjoyed doing these sketches, as it was a fun way to combine the precision of science with the creativity of art. </p>
+      <br /><br /><br />
+      <p>This was my first scientific sketch. I sketched a Red Fox, using chalk pastel to get the basic shading and color pencils for extra details. Through the drawing, I added zoom bubbles around the notable
+      body parts, such as the claws, tail and ears. I also wrote notes about specific body parts. I felt that the final result looked more like a wolf than a fox, but I was still pleased with the proportions on the body. </p>
     </main>
   <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
