--- a/biome/visual.html
+++ b/biome/visual.html
@@ -10,7 +10,7 @@
   <body>
     <navbar id='navbar'>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="biome.html">Biome Projects</a>
+        <a class="navbar-brand" href="biome.html">Biome Artwork</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,13 +20,13 @@
               <a class="nav-link" id="home"href="#">Great Lesson Visual<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="#">Project 2 <span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="fauna.html">Fauna Sketches<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" id="cy2"href="#">Project 3</a>
+            <li class="nav-item active">
+              <a class="nav-link" id="cy2"href="flora.html">Flora Sketches<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" id="cy3" href="#">Project 4</a>
+            <li class="nav-item active">
+              <a class="nav-link" id="cy3"href="stratification.html">Vertical Stratification<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
