--- a/biome/stratification.html
+++ b/biome/stratification.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Flora Sketches</title>
+    <title>Vertical Stratification</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel = stylesheet href = "../js_css/portfolio.css" />
     <link type="image/png" rel="icon" href="https://raw.githubusercontent.com/KabirSamsi/Digital-Portfolio/master/js_css/paintbrush.ico">
@@ -23,10 +23,10 @@
               <a class="nav-link" id="cy1"href="fauna.html">Fauna Sketches<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy2"href="#">Flora Sketches<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy2"href="flora.html">Flora Sketches<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy3"href="stratification.html">Vertical Stratification<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy3"href="#">Vertical Stratification<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -34,19 +34,17 @@
     </navbar>
     <main id='main'>
       <br />
-      <h1 id='thingHead'><strong>Flora Sketches</strong></h1>
-      <br /><br />
-      <p><a style="margin-left: 0px;" id="first_perspective"class='descLinks'href="flower.html"><strong>Scarlet Monkeyflower</strong></a><a class='descLinks'href="shoe.html"><strong>Hiking Shoe</strong></a></p>
-      <img id = 'con2' src = "hor_flower.jpg"width="25%"height="14%"/>
-      <img id = 'sculpture1' src = "shoe.jpg" style="width: 400px; height: 300px;"/>
+      <h1 id='thingHead'><strong>Vertical Stratification</strong></h1>
+      <br />
+      <img id = 'cubism' src = "hor_stratification.jpg"width="25%"height="14%" style="width: 600px; height: 400px;"/>
+      <br />
+      <br />
+      <em>Mediums: Chalk Pastel, Color Pencils, Printer Paper</em>
       <br /><br /><br />
-      <em>Mediums: Chalk Pastel, Color Pencils, Printer/Sketchbook Paper</em>
-      <br /><br />
-      <p>We were supposed to draw four scientific sketches over the course of the biome trip. The first two were supposed to be done before the trip, featuring one fauna and one flora.
-        The second pair were to be done on the trip, and could be anything we wanted, as long as it had the qualities of a scientific sketch. For my last sketch, I didn't sketch flora, but
-        rather sketched an inanimate object, my hiking shoe. I really enjoyed doing these sketches, as it was a fun way to combine the precision of science with the creativity of art. </p>
+      <p>Amongst our biome assignments was the assignment where we had to either do a topographic map or a vertical stratification of Yosemite Valley. I chose a Vertical Stratification because it would take less time,
+        and I also felt that I would be able to model the flora and fauna of the valley better this way. I created the background and trees using pastels, and throughout the scene, drew various plant and animal species
+      at their primary habitat. All of these were from my flora and fauna science assignment. I found this assignment to be fun and not as complicated as I had originally thought.</p>
     </main>
-  <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
