Finished biome section

--- a/cy5/cubism.html
+++ b/cy5/cubism.html
@@ -36,7 +36,7 @@
       <br />
       <h1 id='thingHead'><strong>Cubism Artwork</strong></h1>
       <br />
-      <img id = 'cubism' src = "cubism2.png"width="25%"height="14%" style="width: 600px; height: 400px;"/>
+      <img id = 'cubism' src = "hor_cubism.png"width="25%"height="14%" style="width: 600px; height: 400px;"/>
       <br />
       <br />
       <em>Mediums: Chalk Pastel, Acryllic Paint, Sketchbook Paper</em>
